--- a/src/app/navbar-after-home-page/navbar-after-home-page.component.scss
+++ b/src/app/navbar-after-home-page/navbar-after-home-page.component.scss
@@ -101,7 +101,7 @@ margin-left: 1.5rem;
     margin-top: 25px;
     margin-left: 0rem;
     width: 12rem;
-    border-radius: 0.7rem;
+    // border-radius: 0.7rem;
 }
 
 
