--- a/src/app/newpass/newpass.component.scss
+++ b/src/app/newpass/newpass.component.scss
@@ -87,7 +87,7 @@ select.did-floating-select::-ms-expand {
 
 
 .did-floating-input:not(:placeholder-shown) ~ .did-floating-label {
-  top:-8px;
+  // top:-8px;
   font-size:12px;
 }
 
