--- a/src/app/workspace/workspace.component.html
+++ b/src/app/workspace/workspace.component.html
@@ -13,7 +13,7 @@
                 <li><img src="../../assets/Setting.png">Settings</li>
             </ul>
         </div>
-        <div class="ws-black-card mt-3">
+        <div class="ws-black-card">
             <p class="ws-bc-head">DashBoard Overview</p>
             <p class="ws-bc-name">Hello John <img src="../../assets/logos/image1783.png"></p>
             <div style="display:flex; gap:50px; margin-top: -20px; transform: scale(1.1); margin-left: 3rem;">
@@ -43,14 +43,14 @@
                             <option value="saab">Oldest</option>
                             <option value="opel">Latest</option>
                             <option value="audi">Recent</option>
-                          </select>
+                        </select>
                     </div>
                 </form>
             </div>
             
             
-            <ag-grid-angular style="width: 100%; height: 15rem; overflow: hidden;" class="ag-theme-alpine" [rowData]="rowData$ | async"
-                [columnDefs]="columnDefs" [defaultColDef]="defaultColDef">
+            <ag-grid-angular style="width: 100%; height: 17.5rem; overflow: hidden;" class="ag-theme-alpine" [rowData]="rowData$ | async"
+                [columnDefs]="columnDefs" [defaultColDef]="gridOptions.defaultColDef" [rowHeight]="33">
             </ag-grid-angular>
             <img src="../../assets/logos/frame.png" style="width: 60rem;">
 
