--- a/src/app/workspace/workspace.component.scss
+++ b/src/app/workspace/workspace.component.scss
@@ -12,7 +12,6 @@
 
 .ws-white-card ul{
     padding-left: 0;
-
 }
 
 .ws-white-card li{
@@ -24,7 +23,6 @@
     color: rgb(255, 255, 255);
     font-weight: 600;
     font-size: 11px;
-    
 }
 
 .activeli, .ws-white-card li:hover{
@@ -73,8 +71,8 @@
 .ws-grid-card{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     width: 62rem;
-    height:22rem;
-    max-height:22rem;
+    height: 23.8rem;
+    max-height:23.8rem;
     border-radius: 10px;
     background-color: #f4f4f6;
     padding: 1.5rem 1rem;
@@ -92,6 +90,7 @@
     --ag-foreground-color: rgb(0, 0, 0);
     --ag-borders: none;
     --ag-font-size: 13px;
+    --ag-line-height: 20px
   }
 
 .gridhead{
