--- a/src/app/car-subs/car-subs.component.scss
+++ b/src/app/car-subs/car-subs.component.scss
@@ -326,7 +326,6 @@ img {
     border-radius: 4px;
     font-size: 11px;
     font-weight: bold;
-    border: solid 1px rgb(211, 206, 206);
     border-radius: 4px;
     font-size: 11px;
     font-weight: bold;
@@ -337,13 +336,17 @@ img {
     gap: 0.5rem;
 }
 
-.numbers button {
+.numbers button{
     height: 58px;
     min-width: 60px;
+    background-color: rgb(239, 233, 233);
+    border: solid 1px rgb(156, 151, 151);
+    color: black;
+    font-weight: 500;
 }
 
-.numbers button:hover{
-    border: solid red 2px;
+.numbtn:hover{
+    border: solid 2px red;
 }
 
 
