--- a/src/app/rm-homepage/rm-homepage.component.html
+++ b/src/app/rm-homepage/rm-homepage.component.html
@@ -3,14 +3,14 @@
 <!-- <app-navbar-after-home-page [navtheme]="'blacktheme'"></app-navbar-after-home-page> -->
 <app-homepage-upper></app-homepage-upper>
 <!-- <h1>working</h1> -->
-<div class="card-container dropdown">
+<!-- <div class="card-container dropdown">
   <div class="card first-card" style="width: 18rem">
     <img src="./assets/info-background.png" class="card-img-top" alt="..." />
     <div class="card-body first-card-text">
       <p class="card-text">20%</p>
       <p class="card-text">Week Deals!</p>
       <div class="first-card-text-3">
-        <!-- <p>Nissan GT - R</p> -->
+       
         <ul class="list-group list-group-horizontal car-name-logo-list">
           <li
             class="list-group-item car-name"
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="card-body second-card">
-    <!-- <h1>hhhhh</h1> -->
+   
     <div class="search-filters">
       Select Filters <span class="search-filters-side-text">(2 Selected)</span>
       <span
@@ -65,7 +65,7 @@
     </div>
     <div class="search-box">
       <span class="search-box-span">
-        <!-- <img class="serach-box-img" src="../assets/search-outline 1.png" alt=""> -->
+       
         <input
           type="search"
           class="form-control rounded serach-box-img"
@@ -96,7 +96,7 @@
         ><img src="../assets/pin-outline 1.png" alt=""
       /></span>
     </p>
-    <!-- <h1 class="budget">Budget</h1> -->
+   
     <label for="customRange2" class="form-label budget">Budget</label>
     <input
       type="range"
@@ -130,7 +130,7 @@
   </div>
 
   <div class="card third-card shadow-sm">
-    <!-- <h1>3rd Cardddddddddddd</h1> -->
+ 
     <div class="third-card-headers">
       <p class="payment-calculator third-card-headers-hover-effect">
         Payment Calculator
@@ -146,7 +146,7 @@
     <div class="third-card-input-fields">
       <div class="third-card-purchase-price">
         <p>Purchase Price :</p>
-        <!-- <input type="text" class=""> -->
+      
         <div class="col-6">
           <input
             type="text"
@@ -158,7 +158,7 @@
       </div>
       <div class="third-card-purchase-price">
         <p>Down Payment :</p>
-        <!-- <input type="text" class=""> -->
+      
         <div class="col-6">
           <input
             type="text"
@@ -170,7 +170,7 @@
       </div>
       <div class="third-card-purchase-price">
         <p>Interest Rate :</p>
-        <!-- <input type="text" class=""> -->
+      
         <div class="col-6">
           <input
             type="text"
@@ -182,7 +182,7 @@
       </div>
       <div class="third-card-purchase-price">
         <p>Loan Term Years :</p>
-        <!-- <input type="text" class=""> -->
+      
         <div class="col-6">
           <input
             type="text"
@@ -198,7 +198,7 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <div class="container-fluid">
   <h1 class="finding-car">Find The Cars Of Your Choice</h1>
