--- a/src/app/rm-homepage/rm-homepage.component.scss
+++ b/src/app/rm-homepage/rm-homepage.component.scss
@@ -547,7 +547,7 @@ input[type="range"]::-webkit-slider-runnable-track {
 }
 
 .finding-car {
-  padding-top: 110px;
+  padding-top: 3%;
   color: #000;
   font-family: Inter;
   font-size: 48px;
