--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <!-- <app-home-screen></app-home-screen> -->
 <!-- <app-home-car-collec></app-home-car-collec> -->
 <!-- <app-car-subs></app-car-subs> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
 <!-- <app-approved></app-approved> -->
 <!-- <app-nav-bar-after-home-profile></app-nav-bar-after-home-profile> -->
 <!-- <app-login></app-login> -->
