--- a/src/app/approved/approved.component.scss
+++ b/src/app/approved/approved.component.scss
@@ -1,31 +1,649 @@
-.an-pending{
-    padding: 110px 65px 0px 25px;
-    display:flex;
-    gap: 20px;
-}
- .approval{
-    color: hwb(0 7% 8%);
 
-// font-style: normal;
-font-weight: 500;
-line-height: normal;
-text-transform: uppercase;
- }
 
-.left-card{
+.car-subs-footer {
 
-    height: 30rem;
+    position: fixed;
 
-    width: 27.8rem;
+    border-top: 1px solid rgb(141, 140, 140);
+
+    height: 60px;
+
+    z-index: 7;
+
+    margin-top: -20px;
+
+    background-color: rgb(255, 255, 255);
+
+    display: flex;
+
+    padding-left: 60px;
+
+    padding-right: 60px;
+
+    justify-content: space-between;
+
+    align-items: center;
+
+    bottom: 0px;
+
+    right: 0px;
+
+    left: 0px;
+
+ 
 
 }
 
  
 
-.right-side{
+.redtxt {
 
-    flex:1;
-height: fit-content;
-    padding: 20px
+    color: #c41628;
+
+    font-weight: bold;
+
+    padding-right: 20px;
 
 }
+
+ 
+
+.price {
+
+    color: #000000;
+
+    font-weight: bold;
+
+    padding-right: 20px;
+
+    padding-right: 20px;
+
+}
+
+ 
+
+.cs-footer-right {
+
+    display: flex;
+
+}
+
+ 
+
+.cs-footer-right button {
+
+    color: white;
+
+    height: 40px;
+
+    background-color: #c41628;
+
+    padding: 0 3rem;
+
+    font-size: 20px;
+
+}
+
+ 
+
+.cs-footer-left {
+
+    display: flex;
+
+}
+
+ 
+
+.cs-cred-info-main-screen {
+
+    display: flex;
+
+    gap: 5px;
+
+    padding: 0px 60px;
+
+    margin-bottom: 70px;
+
+}
+
+    .cs-cred-info-left-sec {
+
+        border: 1px solid rgb(141, 140, 140);
+
+        border-radius: 5px;
+
+        width: 30%;
+
+        height: 800px;
+
+        top: 220px;
+
+        left: 100px;
+
+        margin-top: 10px;
+
+ 
+
+    }
+
+ 
+
+    .cs-cred-info-right-sec {
+
+        // border: 1px solid rgb(141, 140, 140);
+
+        width: 70%;
+
+        border-radius: 5px;
+
+        height: 794px;
+
+        top: 220px;
+
+        left: 670px;
+
+        margin-top: 10px;
+
+ 
+
+    }
+
+ 
+
+.Choose{
+
+    margin: 20px;
+
+    padding-left: 20px;
+
+    background-size: cover;
+
+    background-repeat:no-repeat;
+
+    // background-image: url('../../assets/Group 1171275955.png');
+
+    width:200px;
+
+    height:40px;
+
+    -webkit-appearance: none;
+
+-moz-appearance: none;
+
+appearance: none;
+
+margin-left: 10px;
+
+}
+
+.AssetAdd{
+
+    margin-top: 25px;
+
+    background-color:transparent;
+
+    width:100px;
+
+    height:40px;
+
+    border:none;
+
+    background-size:contain;
+
+    background-repeat:no-repeat;
+
+    // background-image:url('../../assets/Frame 1171276031.png');
+
+}
+
+.AssetInput{
+
+    margin: 20px;
+
+    background-size: cover;
+
+    background-repeat:no-repeat;
+
+    width: 300px;
+
+    // background-image: url('../../assets/Group 1171275956.png');
+
+}
+
+select::-ms-expand{
+
+    display: none;
+
+}
+
+ 
+
+.cs-step-one {
+
+    width: 100%;
+
+    height: 33.5%;
+
+    // border: 2px solid black;
+
+    padding: 10px;
+
+    border: 1px solid rgb(141, 140, 140);
+
+    border-radius: 5px;
+
+    .header {
+
+ 
+
+        font-family: Inter;
+
+        font-size: 24px;
+
+        font-weight: 700;
+
+        line-height: 29px;
+
+        letter-spacing: 0px;
+
+        text-align: left;
+
+        color: #DB2423;
+
+        display: flex;
+
+        margin-top: 20px;
+
+        margin-left: 20px;
+
+       
+
+       
+
+    }
+
+ 
+
+}
+
+ 
+
+ 
+
+.cs-step-two {
+
+    width: 100%;
+
+    height: 33.5%;
+
+    // border: 2px solid black;
+
+    padding: 10px;
+
+    border: 1px solid rgb(141, 140, 140);
+
+    border-radius: 5px;
+
+    .header {
+
+ 
+
+        font-family: Inter;
+
+        font-size: 24px;
+
+        font-weight: 700;
+
+        line-height: 29px;
+
+        letter-spacing: 0px;
+
+        text-align: left;
+
+        color: #DB2423;
+
+        display: flex;
+
+        margin-top: 20px;
+
+        margin-left: 20px;
+
+}
+
+}
+
+ 
+
+.cs-step-three {
+
+    width: 100%;
+
+    height: 33.5%;
+
+    // border: 2px solid black;
+
+    padding: 10px;
+
+    // margin-top: auto;
+
+    // margin-left: -839px;
+
+    border: 1px solid rgb(141, 140, 140);
+
+    border-radius: 5px;
+
+ 
+
+    .header {
+
+ 
+
+        font-family: Inter;
+
+        font-size: 24px;
+
+        font-weight: 700;
+
+        line-height: 29px;
+
+        letter-spacing: 0px;
+
+        text-align: left;
+
+        color: #DB2423;
+
+        display: flex;
+
+        margin-top: 20px;
+
+        margin-left: 20px;
+
+ 
+
+}
+
+}
+
+.drop-one{
+
+    display: flex;
+
+}
+
+.drop-image{
+
+    margin-left: 20px;
+
+}
+
+ 
+
+.cs-footer-left button {
+
+    color: #c41628;
+
+    height: 40px;
+
+    background-color: rgb(255, 255, 255);
+
+    padding: 0 3rem;
+
+    font-size: 20px;
+
+    border: none;
+
+    font-style: Nunito Sans;
+
+    font-weight: 600;
+
+    text-transform: uppercase;
+
+}
+
+ 
+
+.radio-button {
+
+    margin-top: 1px;
+
+    margin-left: 20px;
+
+    color: #DB2423!important;
+
+    width: 24px;
+
+    height: 24px;
+
+    border: 15px;
+
+    accent-color:#DB2423
+
+}
+
+.header-two{
+
+font-family: Montserrat;
+
+font-size: 14px;
+
+line-height: 20px;
+
+letter-spacing: 0px;
+
+text-align: left;
+
+margin-left: 20px;
+
+margin-top: 5px;
+
+color: #000000;
+
+font-weight: 650;
+
+}
+
+ 
+
+.sub-header-one{
+
+    font-family: Inter;
+
+        font-size: 12px;
+
+        font-weight: 700;
+
+        line-height: 29px;
+
+        letter-spacing: 0px;
+
+        text-align: left;
+
+        color: #DB2423;
+
+        display: flex;
+
+        margin-top: 20px;
+
+        margin-left: 20px;
+
+}
+
+.header-one{
+
+    font-weight: 1000px;
+
+}
+
+ 
+
+.sub-header-two{
+
+font-family: Montserrat;
+
+font-size: 18px;
+
+font-weight: 700;
+
+line-height: 24px;
+
+letter-spacing: 0px;
+
+text-align: left;
+
+margin-left: 20px;
+
+margin-top: 30px;
+
+   
+
+}
+
+.drop-image-one{
+
+    width:10%;
+
+    height:10%;
+
+ 
+
+    margin-left: 50px;
+
+}
+
+.drop-image-two{
+
+    width: (40px);
+
+height: (25px);
+
+gap: 20px;
+
+margin-top: 10px;
+
+margin-left: 10px;
+
+}
+
+.navbar{
+
+ 
+
+    width: fit-content;
+
+ 
+
+}
+
+.stepper{
+
+ 
+
+    padding-top: -3rem;
+
+ 
+
+    margin-top: 1rem;
+
+ 
+
+    margin-left: 4rem;
+
+ 
+
+    margin-right: 4rem;
+
+ 
+
+}
+
+.stepper-label{
+
+ 
+
+    display: flex;
+
+ 
+
+    justify-content: space-between;
+
+ 
+
+    margin-left: 4rem;
+
+ 
+
+    margin-right: 4rem;
+
+ 
+
+}
+
+.card{
+
+ 
+
+    height: 50rem;
+
+ 
+
+    margin-left: 4rem;
+
+ 
+
+    margin-right: 4rem;
+
+ 
+
+}
+
+.car-card{
+
+    margin: 5px 17px;
+
+ 
+
+    width: 90%;
+
+ 
+
+    height: 200px;
+
+}
+
+.card-title{
+
+ 
+
+    margin-top: 0.5rem;
+
+ 
+
+    text-align: center;
+
+ 
+
+}
+
+.package-details{
+
+ 
+
+    margin-top: 0.5rem;
+
+ 
+
+    margin-left: 0.5rem;
+
+ 
+
+    font-size: 15px;
+
+ 
+
+    font-family: "Montserrat";
+
+ 
+
+}
+
+ 
