--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
 <!-- <app-apply-now-pending></app-apply-now-pending>-->
 <!-- <app-approved></app-approved>  -->
     <!-- <app-login></app-login> -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <!-- <app-apply-now-pending></app-apply-now-pending> -->
 <!-- <app-login></app-login> -->
 <!-- <app-rm-car-collec></app-rm-car-collec> -->
 <!-- <app-workspace></app-workspace> -->
 <!-- <app-how-it-works></app-how-it-works> -->
-<app-apply-now-flow1></app-apply-now-flow1>
+<!-- <app-apply-now-flow1></app-apply-now-flow1> -->
