--- a/src/app/apply-now-flow1/apply-now-flow1.component.scss
+++ b/src/app/apply-now-flow1/apply-now-flow1.component.scss
@@ -328,7 +328,7 @@ hr-1, hr-2{
 
     height: 30px;
 
-    // background: url(../../assets/down-arrow.png) no-repeat 0 0;
+    background: url(../../assets/down-arrow.png) no-repeat 0 0;
 
     transition: all 0.3s ease;
 
@@ -464,7 +464,7 @@ hr-1, hr-2{
 
     height: 30px;
 
-    // background: url(../../assets/down-arrow.png) no-repeat 0 0;
+    background: url(../../assets/down-arrow.png) no-repeat 0 0;
 
 }
 
