--- a/src/app/car-subs/car-subs.component.html
+++ b/src/app/car-subs/car-subs.component.html
@@ -256,7 +256,7 @@
         <i></i>
         <h6 class="redtxt" style="font-size: 13px;">View Benefits</h6>
     </div>
-    <div class="cs-footer-com" (click)="redirect('apply-now')">
+    <div class="cs-footer-com" (click)="redirect('apply-now-flow-1')">
         <button href="car-sub-submit" class="btn">Apply Now</button>
     </div>
 </div>
