--- a/src/app/apply-now-flow1/apply-now-flow1.component.scss
+++ b/src/app/apply-now-flow1/apply-now-flow1.component.scss
@@ -202,7 +202,7 @@ hr-1, hr-2{
 
     font-size: small;
 
-    height: 1.5rem;
+    height: 2rem;
 
     width: 10rem;
 
@@ -218,7 +218,7 @@ hr-1, hr-2{
 
     margin-left: 8rem;
 
-    margin-bottom: 3px;
+    margin-bottom: 2.5px;
 
 }
 
@@ -296,7 +296,7 @@ hr-1, hr-2{
 
     box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.1), 0 4px 11px 0 rgba(0, 0, 0, 0.08);
 
-    color: black;
+    color: #DB2423;
 
     display: block;
 
@@ -364,8 +364,22 @@ hr-1, hr-2{
 
     transition: all 0.3s ease;
 
+    justify-content: space-between;
+
+    display: flex;
+
+    margin-left: 1rem;
+
+    margin-right: 1rem;
+
 }
 
+.contact-details{
+    font-family: "Inter";
+    font-weight: bold;
+    color: #DB2423;
+    margin-right: 2;
+}
  
 
 .collapsible input:checked ~ .collapsible-data{
@@ -376,7 +390,7 @@ hr-1, hr-2{
 
     background: #fff;
 
-    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.1), 0 4px 11px 0 rgba(0, 0, 0, 0.08);
+    // box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.1), 0 4px 11px 0 rgba(0, 0, 0, 0.08);
 
     opacity: 1;
 
@@ -384,17 +398,11 @@ hr-1, hr-2{
 
 }
 
- 
+.collapsible-data p{
+    font-family: "Montserrat";
+    // justify-content: space-between;
+}
 
-// .collapsible-data p{
-
-//     padding-left: 15px;
-
-//     padding-right: 15px;
-
-// }
-
- 
 
 .work-details-dropdown{
 
@@ -402,7 +410,7 @@ hr-1, hr-2{
 
     margin-right: 4rem;
 
-    margin-top: 10rem;
+    margin-top: 5rem;
 
     height: 22rem;
 
