--- a/src/app/approved/approved.component.scss
+++ b/src/app/approved/approved.component.scss
@@ -80,6 +80,10 @@ select{
   .topnav a.active {
     border-bottom: 3px solid red;
   }
+
+  .topnav a{
+border-bottom: 3px solid #EBEBEB;
+  }
 .an-body{
     display: flex;
     color: black;
